--- a/styles/style.css
+++ b/styles/style.css
@@ -216,7 +216,7 @@ header:hover .header_image_ball {
 
 
 /* ==================================================
-===========// Nav Section CSS : Start //============
+===========// Nav Section CSS : Start //=============
 ===================================================== */
 nav {
   display: flex;
